--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,11 @@
   <body id="body">
 
    <ui-view></ui-view>
-   <script src="https://maps.google.com/maps/api/js?key=AIzaSyCE-IsoxmgBiFRKXn0ZgZcYlLZ1FSvpJns"></script>
+   <script src="https://js.stripe.com/v2/"></script>
+   <script type="text/javascript">
+  Stripe.setPublishableKey('pk_test_6pRNASCoBOKtIshFeQd4XMUh');
+   </script>
+    <script src="https://maps.google.com/maps/api/js?key=AIzaSyCE-IsoxmgBiFRKXn0ZgZcYlLZ1FSvpJns"></script>
     <script src="./angular/angular.js"></script>
     <script src=./angular-ui-router/release/angular-ui-router.js></script>
     <script src="https://cdn.jsdelivr.net/satellizer/0.15.4/satellizer.min.js"></script>
