--- a/src/ui-views/login.html
+++ b/src/ui-views/login.html
@@ -5,6 +5,8 @@
 
     <h3>SIGN IN</h3>
 
+<form ng-submit="login(user)">
+
     <div class="signin-input">
         <div class="icon-user signin-user-icon"></div>
         <input ng-model="user.email" type="email" name="name"  placeholder="Email"></input>
@@ -15,8 +17,8 @@
         <input ng-model="user.password" type="password" name="name"  placeholder="Password"></input>
     </div>
 
-    <button ng-click="login(user)" type="button" name="button">SIGN IN</button>
-
+    <button type="submit" name="button">SIGN IN</button>
+</form>
   </section>
 
   <section class="signup-bottom">
