Fixed form styling, also added ignore

--- a/src/ui-views/login.html
+++ b/src/ui-views/login.html
@@ -1,11 +1,11 @@
 
-<section class="signup-cont">
+<section class="login-cont">
 
-  <section class="signup-top">
+  <section class="login-top">
 
     <h3>SIGN IN</h3>
 
-<form ng-submit="login(user)">
+<form ng-submit="login(user)" class="loginMOD">
 
     <div class="signin-input">
         <div class="icon-user signin-user-icon"></div>
@@ -21,7 +21,7 @@
 </form>
   </section>
 
-  <section class="signup-bottom">
+  <section class="login-bottom">
 
     <p>
       Don't have an account? <span ui-sref = "welcome.signup">Create one now</span>
