--- a/src/ui-views/userInfo.html
+++ b/src/ui-views/userInfo.html
@@ -36,7 +36,7 @@
       </div>
 
       <div class="button-container">
-        <button type="button" name="button"> Logout </button>
+        <button  ng-click="userLogOut()" type="button" name="button"> Logout </button>
 
       </div>
 
