--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html ng-app="trackOurTruck">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <link rel="stylesheet" type="text/css" href="./bundle.css">
     <link href="https://file.myfontastic.com/ycdPAxbMz73NaPQmxVwiTF/icons.css" rel="stylesheet">
     <title>Track Trucks</title>
