--- a/src/ui-views/vehicleLocation.html
+++ b/src/ui-views/vehicleLocation.html
@@ -21,7 +21,7 @@
     <section class="vehicle-locations">
       <ul >
         <li ng-repeat="address in addresses track by $index">
-        <li ng-repeat="direction in directions track by $index">
+        <!-- <li ng-repeat="direction in directions track by $index"> -->
 
           <div>
 
@@ -35,7 +35,7 @@
 
 
           <br>
-          {{direction}}
+          <!-- {{direction}} -->
 
           {{address.address}}
 
