fixed the address order, added car array and listed it

--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -9,11 +9,11 @@
    <div class="side-menu-options">
      <ul>
 
-       <li ng-click="vehicleModal()">
+       <li ng-click="vehicleModal()" ng-repeat="vehicle in vehicleArr">
          <div class="truck-user-list">
            <div class="icon-truck"></div>
            <p>
-             Ddfb
+             {{vehicle}}
            </p>
          </div>
          <div class="side-menu-end">
@@ -24,102 +24,6 @@
          </section>
         <div class="icon-right-open"></div>
         </div>
-       </li>
-
-       <li>
-         <div class="truck-user-list">
-           <div class="icon-truck"></div>
-           <p>
-             Btyjw
-           </p>
-         </div>
-
-         <div class="side-menu-end">
-         <section class="car-status">
-           <p id="car-active">
-             Active
-           </p>
-
-         </section>
-        <div class="icon-right-open"></div>
-        </div>
-       </li>
-
-       <li>
-         <div class="truck-user-list">
-           <div class="icon-truck"></div>
-           <p>
-             Rdhs
-           </p>
-         </div>
-
-         <div class="side-menu-end">
-         <section class="car-status">
-
-           <p id="car-off">
-             Off
-           </p>
-         </section>
-        <div class="icon-right-open"></div>
-        </div>
-       </li>
-
-       <li>
-         <div class="truck-user-list">
-           <div class="icon-truck"></div>
-           <p>
-             Udfh
-           </p>
-         </div>
-
-         <div class="side-menu-end">
-         <section class="car-status">
-
-           <p id="car-off">
-             Off
-           </p>
-         </section>
-       <div class="icon-right-open"></div>
-       </div>
-       </li>
-
-       <li>
-         <div class="truck-user-list">
-           <div class="icon-truck"></div>
-           <p>
-             Qdfsfgn
-           </p>
-         </div>
-
-         <div class="side-menu-end">
-         <section class="car-status">
-
-           <p id="car-idle">
-             Idle
-           </p>
-
-         </section>
-        <div class="icon-right-open"></div>
-        </div>
-       </li>
-
-       <li>
-         <div class="truck-user-list">
-           <div class="icon-truck"></div>
-           <p>
-             Kdfgzg
-           </p>
-         </div>
-
-         <div class="side-menu-end">
-         <section class="car-status">
-           <p id="car-active">
-             Active
-           </p>
-
-         </section>
-      <div class="icon-right-open"></div>
-      </div>
        </li>
 
      </ul>
