welcome page can scroll

--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -13,7 +13,7 @@
          <div class="truck-user-list">
            <div class="icon-truck"></div>
            <p>
-             {{vehicle}}
+             {{vehicle.name}}
            </p>
          </div>
          <div class="side-menu-end">
