--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -59,8 +59,9 @@
   </section>
 
   <ng-map zoom='15' center='[40.226209, -111.660947]'>
-    <marker ng-repeat="location in currentLocations track by $index" position="location">
-      <marker>
+    <custom-marker ng-repeat="location in currentLocations track by $index" position="location"></custom-marker>
+
+
 
   </ng-map>
 
