--- a/src/ui-views/vehicleLocation.html
+++ b/src/ui-views/vehicleLocation.html
@@ -48,8 +48,11 @@
 
 
   <ng-map zoom='15' center='{{center}}'>
-    <marker ng-repeat="pin in pins track by $index" position="{{pin}}">
-      <marker>
+    <custom-marker ng-repeat="pin in pins track by $index" position="{{pin}}">
+        <div>
+          These are Car info
+        </div>
+    </custom-marker>
 
         <shape name="polyline"
           path='{{pins}}'
