Event code stopping interval and User profile gets real info

--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -43,7 +43,7 @@
     <section class="user-info-cont" ng-click="userInfo()">
       <div class="username">
         <p>
-          Billy Batson
+          {{theUser.name.toUpperCase()}}
         </p>
       </div>
       <div class="user-icon">
