--- a/src/ui-views/userInfo-Info.html
+++ b/src/ui-views/userInfo-Info.html
@@ -1,9 +1,9 @@
 
     <div class="user-profile-list">
       <ul>
-        <li>Name</li>
-        <li>Email</li>
-        <li>Phone</li>
-        <li>Password</li>
+        <li>Name {{theUser.name.toUpperCase()}}</li>
+        <li>Email {{theUser.email}}</li>
+        <li>Phone Number {{theUser.phoneNumber}}</li>
+        <li>Password ********</li>
       </ul>
     </div>
