--- a/src/ui-views/userInfo.html
+++ b/src/ui-views/userInfo.html
@@ -27,7 +27,7 @@
     <div class="the-buttons">
 
       <div class="button-container">
-        <button ui-sref="userHome.userInfo.info" type="button" name="button"> Profile </button>
+        <button ng-click="showProfile()" type="button" name="button"> Profile </button>
       </div>
 
       <div class="button-container">
