--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <link rel="stylesheet" type="text/css" href="./bundle.css">
     <link href="https://file.myfontastic.com/ycdPAxbMz73NaPQmxVwiTF/icons.css" rel="stylesheet">
     <title>Track Trucks</title>
@@ -15,7 +15,7 @@
    <script type="text/javascript">
   Stripe.setPublishableKey('pk_test_6pRNASCoBOKtIshFeQd4XMUh');
    </script>
-    <script src="https://maps.google.com/maps/api/js?key=AIzaSyCE-IsoxmgBiFRKXn0ZgZcYlLZ1FSvpJns"></script>
+    <script src="http://maps.google.com/maps?file=api&v=2&sensor=false&key=AIzaSyCE-IsoxmgBiFRKXn0ZgZcYlLZ1FSvpJns"></script>
     <script src="./bundle.js"></script>
   </body>
 </html>
