--- a/src/ui-views/welcome.html
+++ b/src/ui-views/welcome.html
@@ -8,7 +8,7 @@
 
         <section class="welcome-content">
 
-            <h1>Lorem ipsum dolor sit amet</h1>
+            <h1><span style="color: orange">T</span>rack Our Truck</h1>
 
             <div class="title-bar">
 
