--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -28,6 +28,14 @@
 
      </ul>
    </div>
+<section id="foot">
+
+  <div class="userhome-footer">
+
+    <p>HELP</p>
+  </div>
+
+</section>
 
 </section>
 
