--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
    <script type="text/javascript">
   Stripe.setPublishableKey('pk_test_6pRNASCoBOKtIshFeQd4XMUh');
    </script>
-    <script src="https://maps.google.com/maps/api/js?key=AIzaSyCE-IsoxmgBiFRKXn0ZgZcYlLZ1FSvpJns"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCE-IsoxmgBiFRKXn0ZgZcYlLZ1FSvpJns&callback=initMap"></script>
     <script src="./bundle.js"></script>
   </body>
 </html>
