--- a/src/ui-views/vehicleLocation.html
+++ b/src/ui-views/vehicleLocation.html
@@ -50,12 +50,14 @@
 
 
 
-  <ng-map zoom='15' center='{{center}}' >
-    <marker  ng-repeat="pin in pins track by $index" position="{{pin}}" on-click="showDesc($index, pin)"></marker>
+  <ng-map zoom='15' center='{{center}}' on-click="choiceOff()">
+    <marker  ng-repeat="pin in pins track by $index" position="{{pin}}" on-click="showDesc($index, pin, dayLocations)"></marker>
 
-    <custom-marker class="vehicle-info-marker"position="">
+    <custom-marker class="vehicle-info-marker"position="{{choiceCenter}}" ng-if="choiceOn">
         <div class="marker-desc">
-          {{choiceInfo}}
+          {{choiceInfo.address}}
+          {{choiceInfo.speed}} MPH
+          {{choiceHeading}}
         </div>
     </custom-marker>
 
