added help page, and changed styling on welcome h1 and h3

--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -28,11 +28,11 @@
 
      </ul>
    </div>
-<section id="foot">
+<section ui-sref="help" id="foot">
 
   <div class="userhome-footer">
 
-    <p>HELP</p>
+    <p>Need Help?</p>
   </div>
 
 </section>
