--- a/src/ui-views/welcome.html
+++ b/src/ui-views/welcome.html
@@ -8,13 +8,13 @@
 
         <section class="welcome-content">
 
-            <h1><span style="color: orange">T</span>rack Our Truck</h1>
+            <h1>Track Our Truck Ok</h1>
 
             <div class="title-bar">
 
             </div>
 
-            <h3>deserunt mollit anim id est laborum.</h3>
+            <h3>We sucessfully tracked Brett.</h3>
             <div class="welcome-button-container">
                 <button type="button" name="button" ng-click ='signupModal()'>Signup Now</button>
             </div>
