--- a/src/ui-views/vehicleLocation.html
+++ b/src/ui-views/vehicleLocation.html
@@ -9,8 +9,8 @@
 
        <div class="input-group">
            <input class="form-control" placeholder="Choose a date" ng-model="theDate" ng-change="getUserVehicle()" />
-           <input placeholder="Time From" ng-model="timeFrom" type="time" />
-           <input placeholder="Time To" ng-model="timeTo" type="time" />
+           <input ng-hide='showHidden'placeholder="Time From" ng-model="timeFrom" type="time" />
+           <input ng-hide='showHidden'placeholder="Time To" ng-model="timeTo" type="time" />
            <button ng-click="getUserVehicle()" type="button" ng-hide='showHidden'>Show Locations</button><button ng-click="resetTime()" type="button" ng-hide="resetHidden">Reset Locations</button>
            <span class="input-group-addon" style="cursor: pointer">
            <i class="fa fa-lg fa-calendar"></i>
