--- a/src/ui-views/vehicleLocation.html
+++ b/src/ui-views/vehicleLocation.html
@@ -3,12 +3,14 @@
 
     <section class="location-header">
 
-        <!-- <div class="icon-calender"></div> -->
+        <div class="icon-calendar"></div>
 
         <datepicker date-format="EEE MM/dd/yyyy" selector="form-control">
 
        <div class="input-group">
-           <input class="form-control" placeholder="Choose a date" ng-model="theDate" ng-change="getUserVehicle()" />
+           <input class="form-control"  ng-model="theDate" ng-change="getUserVehicle()" />
+
+        <div class="icon-clock-o"></div>
            <input placeholder="Time From" ng-model="timeFrom" type="time" />
            <input placeholder="Time To" ng-model="timeTo" type="time" />
            <button ng-click="getUserVehicle()" type="button" ng-hide='showHidden'>Show Locations</button><button ng-click="resetTime()" type="button" ng-hide="resetHidden">Reset Locations</button>
@@ -17,7 +19,7 @@
            </span>
     </datepicker>
       </div>
-        <div class="icon-caret-up-down reverseBtn"></div>
+
 
     </section>
 
