added more help buttons

--- a/src/ui-views/vehicleInfo.html
+++ b/src/ui-views/vehicleInfo.html
@@ -1,10 +1,20 @@
 <section class="vehicle-info-header">
+
+  <section class="vehicle-tab-header">
+
   <div class="vehicle-name-tab">
 <h4>
   Vehicle Name
 </h4>
   </div>
+  <div ui-sref="help" class="vehicle-name-help-tab">
 
+    <h3>
+      Help?
+    </h3>
+
+  </div>
+</section>
 
   <section class="vehicle-tabs">
 
