--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -17,8 +17,8 @@
          </div>
          <div class="side-menu-end">
          <section class="car-status">
-           <p id="car-idle">
-             Idle
+           <p id="car-active">
+             Active
            </p>
          </section>
         <div class="icon-right-open"></div>
