--- a/src/ui-views/userInfo.html
+++ b/src/ui-views/userInfo.html
@@ -9,6 +9,16 @@
     </h4>
 
   </div>
+  <div ui-sref="help" class="user-name-help-tab">
+
+    <h3>
+      Help?
+    </h3>
+
+  </div>
+
+
+
 
 </section>
 
