--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -65,7 +65,7 @@
 
   </section>
 
-  <ng-map zoom='15' center='[40.226209, -111.660947]'>
+  <ng-map zoom-to-include-markers="true" icon="./map-marker.png">
     <marker ng-repeat="location in currentLocations track by $index" position="location"></marker>
 
 
