--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -66,7 +66,7 @@
   </section>
 
   <ng-map zoom-to-include-markers="true" icon="./map-marker.png">
-    <marker ng-repeat="location in currentLocations track by $index" position="location"></marker>
+    <marker ng-repeat="location in currentLocations track by $index" position="{{location}}"></marker>
 
 
 
