--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -65,8 +65,8 @@
 
   </section>
 
-  <ng-map zoom-to-include-markers="true" icon="./map-marker.png">
-    <marker ng-repeat="location in currentLocations track by $index" position="{{location}}"></marker>
+  <ng-map zoom="11" center="[40.74, -74.18]" zoom-to-include-markers="true" >
+    <marker ng-repeat="location in currentLocations track by $index" position="{{location}}" icon="./map-marker.png"></marker>
 
 
 
