--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -12,7 +12,7 @@
          <div class="truck-user-list">
            <div class="icon-car"></div>
            <p>
-             {{vehicle.name}}
+             Vehicle Name
            </p>
          </div>
          <div class="side-menu-end">
@@ -42,9 +42,9 @@
 
   <section class="user-top-menu">
 
-    <div class="dash">
+    <section class="dash">
       <h2>Dashboard</h2>
-    </div>
+    </section>
 
 
     <section class="user-info-cont" ng-click="userInfo()">
