--- a/src/ui-views/vehicleInfo.html
+++ b/src/ui-views/vehicleInfo.html
@@ -4,7 +4,7 @@
 
   <div class="vehicle-name-tab">
 <h4>
-  Vehicle Name
+  {{vehicle.name}}
 </h4>
   </div>
   <div ui-sref="help" class="vehicle-name-help-tab">
