added some things

--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -12,7 +12,7 @@
          <div class="truck-user-list">
            <div class="icon-car"></div>
            <p>
-             Vehicle Name
+             {{vehicle.name}}
            </p>
          </div>
          <div class="side-menu-end">
