--- a/src/ui-views/vehicleInfo.html
+++ b/src/ui-views/vehicleInfo.html
@@ -19,13 +19,13 @@
   <section class="vehicle-tabs">
 
   <div ui-sref="userHome.vehicleInfo.location" ng-click="setTab(1)" ng-class="{active: isSet(1) }">
-    <p >
+    <p ng-click="goToLocation()">
       Location
     </p>
   </div>
 
   <div  ng-click="setTab(2)" ng-class="{active: isSet(2)}">
-<p>
+<p ng-click="goToBehaviors()">
   Behavior
 </p>
   </div>
