--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -66,9 +66,9 @@
   </section>
 
   <ng-map zoom-to-include-markers="true" icon="./map-marker.png">
-    <marker ng-repeat="location in currentLocations track by $index" position="location" on-click="showName(event, $index, location)"></marker>
+    <marker ng-repeat="location in currentLocations track by $index" position="location" ng-init="showName($index, location)"></marker>
 
-    <custom-marker class="vehicle-info-marker" position="{{choiceCenter}}" ng-if="choiceOn">
+    <custom-marker class="vehicle-info-marker" position="{{choiceCenter}}">
 
       <div class="marker-cont">
 
