add change vehicle name

--- a/src/ui-views/acceleration.html
+++ b/src/ui-views/acceleration.html
@@ -1,2 +1,5 @@
-acceleration
-<button type="button" name="button" ng-click="back()">Back</button>
+<section class="behaviorSections">
+  <center>Fast Acceleration</center>
+  <center><button type="button" name="button" ng-click="back()">Back</button></center>
+
+</section>
