--- a/src/ui-views/hardStops.html
+++ b/src/ui-views/hardStops.html
@@ -1,2 +1,5 @@
-hardStops
-<button type="button" name="button" ng-click="back()">Back</button>
+<section class="behaviorSections">
+  <center>Hard Stops</center>
+  <center><button type="button" name="button" ng-click="back()">Back</button></center>
+
+</section>
