--- a/src/ui-views/idlings.html
+++ b/src/ui-views/idlings.html
@@ -1,2 +1,5 @@
-idlings
-<button type="button" name="button" ng-click="back()">Back</button>
+<section class="behaviorSections">
+  <center>Idlings</center>
+  <center><button type="button" name="button" ng-click="back()">Back</button></center>
+
+</section>
