--- a/src/ui-views/inspection.html
+++ b/src/ui-views/inspection.html
@@ -1,2 +1,5 @@
-inspection
-<button type="button" name="button" ng-click="back()">Back</button>
+<section class="behaviorSections">
+  <center>Inspection</center>
+  <center><button type="button" name="button" ng-click="back()">Back</button></center>
+
+</section>
