--- a/src/ui-views/lowBattery.html
+++ b/src/ui-views/lowBattery.html
@@ -1,2 +1,5 @@
-lowBattery
-<button type="button" name="button" ng-click="back()">Back</button>
+<section class="behaviorSections">
+  <center>Low Battery</center>
+  <center><button type="button" name="button" ng-click="back()">Back</button></center>
+
+</section>
