--- a/src/ui-views/maintenance.html
+++ b/src/ui-views/maintenance.html
@@ -1,2 +1,5 @@
-maintenance
-<button type="button" name="button" ng-click="back()">Back</button>
+<section class="behaviorSections">
+  <center>Maintenance</center>
+  <center><button type="button" name="button" ng-click="back()">Back</button></center>
+
+</section>
