--- a/src/ui-views/mileage.html
+++ b/src/ui-views/mileage.html
@@ -1,2 +1,5 @@
-mileage
-<button type="button" name="button" ng-click="back()">Back</button>
+<section class="behaviorSections">
+  <center>Mileage</center>
+  <center><button type="button" name="button" ng-click="back()">Back</button></center>
+
+</section>
