--- a/src/ui-views/registration.html
+++ b/src/ui-views/registration.html
@@ -1,2 +1,5 @@
-registration
-<button type="button" name="button" ng-click="back()">Back</button>
+<section class="behaviorSections">
+  <center>Registration</center>
+  <center><button type="button" name="button" ng-click="back()">Back</button></center>
+
+</section>
