--- a/src/ui-views/vehicleLocation.html
+++ b/src/ui-views/vehicleLocation.html
@@ -3,7 +3,7 @@
 
     <section class="location-header">
 
-        <div class="icon-calendar"></div>
+        <!-- <div class="icon-calendar"></div> -->
 
         <datepicker date-format='EEE MMMM d y' selector="form-control">
 
