--- a/src/ui-views/diagnostics.html
+++ b/src/ui-views/diagnostics.html
@@ -1,2 +1,6 @@
-diagnostics
-<button type="button" name="button" ng-click="back()">Back</button>
+
+<section class="behaviorSections">
+  <center>Diagnostics</center>
+  <center><button type="button" name="button" ng-click="back()">Back</button></center>
+
+</section>
