--- a/src/ui-views/speeding.html
+++ b/src/ui-views/speeding.html
@@ -1,2 +1,5 @@
-Speeding
-<button type="button" name="button" ng-click="back()">Back</button>
+<section class="behaviorSections">
+  <center>Speeding</center>
+  <center><button type="button" name="button" ng-click="back()">Back</button></center>
+
+</section>
