--- a/src/ui-views/stops.html
+++ b/src/ui-views/stops.html
@@ -1,2 +1,5 @@
-stops
-<button type="button" name="button" ng-click="back()">Back</button>
+<section class="behaviorSections">
+  <center>Stops</center>
+  <center><button type="button" name="button" ng-click="back()">Back</button></center>
+
+</section>
