add active and off

--- a/src/ui-views/userInfo-Info.html
+++ b/src/ui-views/userInfo-Info.html
@@ -1,9 +1,9 @@
 
     <div class="user-profile-list">
       <ul>
-        <li>Name {{theUser.name.toUpperCase()}}</li>
-        <li>Email {{theUser.email}}</li>
-        <li>Phone Number {{theUser.phoneNumber}}</li>
-        <li>Password ********</li>
+        <li>Name: &nbsp;{{theUser.name.toUpperCase()}}</li>
+        <li>Email: &nbsp;{{theUser.email}}</li>
+        <li>Phone Number: &nbsp;{{theUser.phoneNumber}}</li>
+        <li>Password: &nbsp;********</li>
       </ul>
     </div>
