--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -17,8 +17,11 @@
          </div>
          <div class="side-menu-end">
          <section class="car-status">
-           <p id="car-active">
+           <p ng-hide="on"id="car-active">
              Active
+           </p>
+           <p ng-hide="off"id="car-off">
+             Off
            </p>
          </section>
         <div class="icon-right-open"></div>
