--- a/src/ui-views/signUp.html
+++ b/src/ui-views/signUp.html
@@ -6,6 +6,8 @@
 
         <form ng-submit="signUp(user)">
 
+        <div class="signup-error-message">{{errorMessage}}</div>
+
         <div class="signin-input">
             <div class="icon-user signin-user-icon"></div>
             <input ng-model="user.name" type="input" name="name" placeholder="name"></input>
@@ -14,20 +16,17 @@
         <div class="signin-input">
             <div class="icon-call-phone signin-user-icon"></div>
             <input ng-model="user.phoneNumber" type="number" name="name" placeholder="number"></input>
-            <div>{{notANumber}}</div>
         </div>
 
         <div class="signin-input">
             <div class="icon-mail signin-user-icon"></div>
             <input ng-model="user.email" type="email" name="name" placeholder="email"></input>
-            <div>{{conflict}}</div>
         </div>
 
 
         <div class="signin-input">
             <div class="icon-key signin-key-icon"></div>
             <input ng-model="user.password" type="password" name="name" placeholder="password"></input>
-            <div>{{notANumber}}</div>
         </div>
 
 
