updated mobile views on welcome

--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -72,7 +72,7 @@
     <marker ng-repeat="location in currentLocations track by $index" position="{{location}}" icon="./map-marker.png" ></marker>
     <!-- ng-init="showName($index, location)" -->
 
-    <custom-marker class="vehicle-info-marker" position="{{choiceCenter}}">
+    <!-- <custom-marker class="vehicle-info-marker" position="{{choiceCenter}}">
 
       <div class="marker-cont">
 
@@ -89,7 +89,7 @@
 
       </div>
 
-    </custom-marker>
+    </custom-marker> -->
 
 
   </ng-map>
