--- a/src/ui-views/welcome.html
+++ b/src/ui-views/welcome.html
@@ -8,7 +8,7 @@
 
         <section class="welcome-content">
 
-            <h1>Track Our Truck Ok</h1>
+            <h1>Never worry again about your vehicles</h1>
 
             <div class="title-bar">
 
