--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,8 @@
 
    <ui-view></ui-view>
    <script src="https://js.stripe.com/v2/"></script>
-   <script type="text/javascript">
-  Stripe.setPublishableKey('pk_test_6pRNASCoBOKtIshFeQd4XMUh');
-   </script>
     <script src="https://maps.google.com/maps/api/js?key=AIzaSyAhLCAAyP4IVHjWK3kf6Ts_kGII2jtX5qI"></script>
     <script src="./bundle.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-stripe/4.2.12/angular-stripe.js"></script>
   </body>
 </html>
