--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -17,10 +17,10 @@
          </div>
          <div class="side-menu-end">
          <section class="car-status">
-           <p ng-hide="vehicleOn"id="car-active">
+           <p id="car-active">
              Active
            </p>
-           <p ng-hide="vehicleOff"id="car-off">
+           <p id="car-off">
              Off
            </p>
          </section>
