--- a/src/ui-views/userHome.html
+++ b/src/ui-views/userHome.html
@@ -72,12 +72,12 @@
     <marker ng-repeat="location in currentLocations track by $index" position="{{location}}" icon="./map-marker.png" ></marker>
     <!-- ng-init="showName($index, location)" -->
 
-    <!-- <custom-marker class="vehicle-info-marker" position="{{location}}">
+    <custom-marker class="vehicle-info-marker" position="{{location}}">
 
       <div class="marker-cont">
 
         <div class="marker-desc">
-          <p>{{choiceName}}</p>
+          <p>TEST</p>
 
         </div>
 
@@ -89,7 +89,7 @@
 
       </div>
 
-    </custom-marker> -->
+    </custom-marker>
 
 
   </ng-map>
