--- a/src/ui-views/stops.html
+++ b/src/ui-views/stops.html
@@ -5,7 +5,7 @@
 
   <div class="input-group">
 
-     <input class="form-control" placeholder="Choose a date" ng-model="theDate" ng-change="getStops()" /><br>
+     <input class="form-control" placeholder="Choose a date" ng-model="theDate" ng-change="dateFilter()" /><br>
 
                 <span class="input-group-addon" style="cursor: pointer">
 
