--- a/src/ui-views/stops.html
+++ b/src/ui-views/stops.html
@@ -1,18 +1,11 @@
 <section class="behaviorSections">
   <center>Stops</center>
 
-  <datepicker date-format='EEE MMMM d y' selector="form-control">
+  
 
-  <div class="input-group">
+     <input placeholder="Choose a date" type="date" ng-model="theDate" ng-change="dateFilter()" />
 
-     <input class="form-control" placeholder="Choose a date" ng-model="theDate" ng-change="dateFilter()" /><br>
 
-                <span class="input-group-addon" style="cursor: pointer">
-
-     <i class="fa fa-lg fa-calendar"></i>
-     </span>
-
-  </datepicker>
 
 
 </section>
