--- a/src/ui-views/stops.html
+++ b/src/ui-views/stops.html
@@ -1,15 +1,16 @@
-<center>Stops</center>
-<input placeholder="Choose a date" type="date" ng-model="theDate" ng-change="dateFilter()" />
+
 
 <section class="behaviorSections">
-
+  <center>Stops</center>
+  Choose Stops Date: <input placeholder="Choose a date" type="date" ng-model="theDate" ng-change="dateFilter()" />
 
 
 
 
      <ul ng-repeat="stop in theStopsArray">
        <li>Address: {{stop.address}}<br>
-         Time: {{stop.fixTime | date: 'shortTime'}}
+         Stop Time: {{stop.fixTime | date: 'shortTime'}}
+         Time at Stop: {{stop.stopTime | date: 'h:mm:ss'}}
        </li>
      </ul>
 
