--- a/src/ui-views/stops.html
+++ b/src/ui-views/stops.html
@@ -10,7 +10,7 @@
      <ul ng-repeat="stop in theStopsArray">
        <li>Address: {{stop.address}}<br>
          Stop Time: {{stop.fixTime | date: 'shortTime'}}<br>
-         Time at Stop: {{stop.stopTime | date: 'h:mm:ss'}}
+         Time at Stop: <b ng-show="showTime">{{stop.stopTime | date: 'h:mm:ss'}}</b> <b ng-show="stillThere">Still at this location</b>
        </li>
      </ul>
 
