--- a/src/ui-views/vehicleLocation.html
+++ b/src/ui-views/vehicleLocation.html
@@ -74,9 +74,9 @@
       <div class="marker-cont">
 
         <div class="marker-desc">
-          <p>{{choiceInfo.address}}</p>
-          <p>{{new Date(choiceInfo.fixTime) | date: 'shortTime'}}</p>
-          <p>Speed: {{choiceInfo.speed}} MPH </p>
+          <p>{{choiceInfo.address}}</p><br>
+          <p>{{theTime.fixTime | date: 'shortTime'}}</p><br>
+          <p>Speed: {{choiceInfo.speed}} MPH </p><br>
           <p>
             Heading:{{choiceHeading}}
           </p>
