fixed the modal sizing

--- a/src/ui-views/directiveTmpls/modalTmpl.html
+++ b/src/ui-views/directiveTmpls/modalTmpl.html
@@ -1,4 +1,4 @@
-<section ng-if='wideModalOn'>
+<section ng-if='wideModalOn' class="modal-cont">
 
 
 
@@ -24,8 +24,7 @@
 
 </section>
 
-<section ng-if='thinModalOn'>
-
+<section ng-if='thinModalOn' class="modal-cont">
 
 
     <section class="thin-modal-box">
