--- a/src/ui-views/vehicleLocation.html
+++ b/src/ui-views/vehicleLocation.html
@@ -91,7 +91,7 @@
       </div>
 
     </custom-marker>
-
+<p>{{choiceInfo.fixTime | date: 'shortTime'}}</p><br>
 
         <shape name="polyline"
           path='{{pins}}'
