--- a/src/ui-views/adminNewUser.html
+++ b/src/ui-views/adminNewUser.html
@@ -1,7 +1,13 @@
-<section ng-hide="newUserInputsHidden">
-  <input type="text" ng-model="newUser.name" placeholder="Name">
-  <input type="text" ng-model="newUser.email" placeholder="Email">
-  <input type="text" ng-model="newUser.phoneNumber" placeholder="Number">
-  <input type="text" ng-model="newUser.password" placeholder="Password">
-  <button type="button" ng-click="addUser(newUser)">Add User</button>
+<section class="admin-new-user-body" ng-hide="newUserInputsHidden">
+  <section class="new-user-inputs-header">
+    <h1>Add New User</h1>
+  </section>
+  <section class="new-user-inputs-body">
+    <input type="text" ng-model="newUser.name" placeholder="Name">
+    <input type="text" ng-model="newUser.email" placeholder="Email">
+    <input type="text" ng-model="newUser.phoneNumber" placeholder="Number">
+    <input type="text" ng-model="newUser.password" placeholder="Password">
+
+    <button type="button" ng-click="addUser(newUser)">Add User</button>
+  </section>
 </section>
