--- a/src/ui-views/stops.html
+++ b/src/ui-views/stops.html
@@ -10,11 +10,11 @@
      <ol ng-repeat="stop in stops">
        <li>Address: {{stop.address}}<br>
          Stop Time: {{stop.fixTime | date: 'shortTime'}}<br>
-         Time at Stop: <b>{{Math.floor(stop.stopTime/1000/60/60)}}:{{Math.floor(stop.stopTime/1000/60)}}</b>
+         Time at Stop: <b>{{stop.stopTime}}</b>
          <!-- Time at Stop: <b ng-show="showTime">{{stop.stopTime | date: 'h:mm:ss'}}</b> -->
          <!-- <b ng-show="stillThere">Still at this location</b> -->
        </li>
-     </ol>
+     </l>
 
 
 
