--- a/src/ui-views/vehicleLocation.html
+++ b/src/ui-views/vehicleLocation.html
@@ -9,7 +9,8 @@
 
        <div class="input-group">
 
-           <input class="form-control" placeholder="Choose a date" ng-model="theDate" ng-change="getUserVehicle()" /><br>
+           <input class="form-control" placeholder="Choose a date" ng-model="theDate" ng-change="getUserVehicle()" />
+           <br>
            <!-- <div class="icon-caret-up-down reverseBtn"></div> -->
                       <span class="input-group-addon" style="cursor: pointer">
 <!-- =======
@@ -25,9 +26,25 @@
            <i class="fa fa-lg fa-calendar"></i>
            </span>
            <center>Filter Location By Time</center> <br>
-           <b>From: <input placeholder="Time From" ng-model="timeFrom" type="time" /></b><br>
-           <b>To: <input placeholder="Time To" ng-model="timeTo" type="time" /></b><br>
-           <bsb><button ng-click="resetTime()" type="button" >Reset Locations</button>&nbsp;<button ng-click="getUserVehicle()" type="button" >Show Locations</button></bsb>
+
+           <div class="time-from-to">
+             <b>From: <input placeholder="Time From" ng-model="timeFrom" type="time" />
+             </b>
+
+             <b>To: <input placeholder="Time To" ng-model="timeTo" type="time" />
+             </b>
+           </div>
+
+           <bsb>
+             <button ng-click="resetTime()" type="button" >
+               Reset Locations
+             </button>&nbsp;
+             <button ng-click="getUserVehicle()" type="button" >
+               Show Locations
+             </button>
+           </bsb>
+
+
     </datepicker>
 
 
