create functionality for toggle hamburger menu

--- a/src/ui-views/directiveTmpls/headerTmpl.html
+++ b/src/ui-views/directiveTmpls/headerTmpl.html
@@ -23,7 +23,7 @@
 
     </section>
 
-  <div class="hamburger-menu" ng-if = (hamMenu === true)>
+  <div class="hamburger-menu" ng-if = (hamMenu)>
 
     <ul>
         <li ui-sref = "welcome">Home</li>
